--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="pt_BR">
     <head>
         <!-- TITLE OF SITE -->
-        <title> 8PHP | 8º Fórum de profissionais PHP do Estado do Maranhão</title>
+        <title>8PHP | 8º Fórum de profissionais PHP do Estado do Maranhão</title>
 
         <meta charset="utf-8">
         <meta name="description" content="Oitavo Fórum de profissionais php do estado do maranhão" />
@@ -35,12 +35,12 @@
         <link rel="stylesheet" href="css/preloader.css">
 
         <!-- CAROUSEL SLIDERS -->
-        <link rel="stylesheet" href="css/owl.carousel.css">
+        <!--<link rel="stylesheet" href="css/owl.carousel.css">-->
         <link rel="stylesheet" href="css/owl.theme.css">
         <link rel="stylesheet" href="css/owl.transitions.css">
 
-        <!--  CSS3 ANIMATE CSS  -->
-        <link rel="stylesheet" href="css/animate.css">
+        <!-- CSS3 ANIMATE CSS -->
+        <!--<link rel="stylesheet" href="css/animate.css">-->
 
         <!--  DROPDOWN CSS  -->
         <link rel="stylesheet" href="css/fancySelect.css" />
