--- a/index.html
+++ b/index.html
@@ -747,6 +747,24 @@
                                 <p>CEO, Mr Lucky; Tech Leader, SEATI</p>
                             </div>
 
+                            <div class="item col-md-3 col-xs-6">
+                                <div class="view view-first">
+                                    <img src="images/speakers-img/nanderson-castro.jpeg" alt="">
+                                    <div class="mask">
+                                        <ul class="nav">
+                                            <li><a href="https://www.instagram.com/nandokstronet/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/NandoKstroNet" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/NandoKstroNet" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/nandersoncastro/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+
+                                <h3>Nanderson Castro</h3>
+                                <p>CEO, Code Experts Learning</p>
+                            </div>
+
                         </div>
 
                     </div>
