--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                                 </div>
                                 <div class="clearfix"></div>
 
-                                <h3>Ricado Coelho</h3>
+                                <h3>Ricardo Coelho</h3>
                                 <p>CAO, Nexy</p>
                             </div>
 
