--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-10" aria-controls="scedule-sub-2" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
-                                                    <span class="nav-time">William Mano: 09:00 - 09:40</span>
+                                                    <span class="nav-header">Code Revolution</span>
+                                                    <span class="nav-time">Willian Mano: 09:00 - 09:40</span>
                                                 </a>
                                             </li>
 
@@ -496,8 +496,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-10">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Code Revolution</h3>
+                                            <p>Vamos relembrar os alicerces da engenharia de software e trazer para os dias atuais as novas abordagens, técnicas e processos utilizados. Entenderemos na prática coisas como Agile, CI, Testes e etc.. Vamos trazer para nossos dias a verdadeira revolução, a revolução do código!</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-11">
