--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                             <ul class="scedule-main col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 nav wow fadeInDown animated" data-wow-offset="10" data-wow-duration="1.5s" role="tablist">
 
                                 <li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-6 active">
-                                    <a class="btn-border btn-standard btn btn-cus" href="#scedule-1" aria-controls="scedule-1" role="tab" data-toggle="tab">Primeiro dia</a>
+                                    <a class="btn-border btn-standard btn btn-cus" href="#scedule-1" aria-controls="scedule-1" role="tab" data-toggle="tab">17/11</a>
                                 </li>
                                 <li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-6">
-                                    <a class="btn-border btn-standard btn btn-cus" href="#scedule-3" aria-controls="scedule-3" role="tab" data-toggle="tab">Segundo dia</a>
+                                    <a class="btn-border btn-standard btn btn-cus" href="#scedule-3" aria-controls="scedule-3" role="tab" data-toggle="tab">18/11</a>
                                 </li>
 
                             </ul>
@@ -868,7 +868,7 @@
 
                                         <!-- Tab-2 Detail Goes Here  -->
                                         <div class="panel-body">
-                                            O evento é gratuito e você pode participar de todas as atividades que serão apresentadas. Só basta ir. :)
+                                            O evento é gratuito e você pode participar de todas as atividades que serão apresentadas. Vale lembrar que você deve se inscrever gratuitamente para pode participar do evento. :)
                                         </div>
 
                                     </div>
