--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-16" aria-controls="scedule-sub-8" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Não definido</span>
-                                                    <span class="nav-time">Gabrielle Limach: 15:40 - 16:20</span>
+                                                    <span class="nav-time">Gabrielle Machado: 15:40 - 16:20</span>
                                                 </a>
                                             </li>
 
@@ -552,7 +552,7 @@
 
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
-                                    <img src="images/speakers-img/gabrielle-limach.jpg" alt="">
+                                    <img src="images/speakers-img/Gabrielle-Machado.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
                                             <li><a href="https://www.instagram.com/gabi_lmm/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
@@ -564,7 +564,7 @@
                                 </div>
                                 <div class="clearfix"></div>
 
-                                <h3>Gabrielle Limach</h3>
+                                <h3>Gabrielle Machado</h3>
                                 <p>Programadora, UNDB</p>
                             </div>
 
