--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-3" aria-controls="scedule-sub-3" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Aprendendo a empreender nos erros dos outros</span>
-                                                    <span class="nav-time">Evaldo Barbosa: 09:00 - 09:40</span>
+                                                    <span class="nav-header">Implementando autenticação de dois fatores em qualquer aplicação</span>
+                                                    <span class="nav-time">Ricardo Coelho: 09:00 - 09:40</span>
                                                 </a>
                                             </li>
 
@@ -357,9 +357,9 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-3">
-                                            <h3>Aprendendo a empreender nos erros dos outros</h3>
-                                            <p>Empreendedorismo e Desenvolvimento.</p>
-                                            <p>Nessa palestra mostrarei ao programador (ou outro profissional) que empreender é muito mais que ser "o frente" do negócio. Que o intraempreendedorismo é uma forma de executar o seu trabalho com paixão e ainda aprender com os erros do negócio para, futuramente, empreender em sua própria ideia. Que executar seu trabalho com um propósito claro (a estratégia) é a melhor forma de dar resultados e aprender a olhar o horizonte sem medo.</p>
+                                            <h3>Implementando autenticação de dois fatores em qualquer aplicação</h3>
+                                            <p>Todos temos conhecidos cujas senhas foram expostas. Conhece alguém? São frequentes os relatos de invasão de servidores, uso de engenharia social, vazamentos de senhas por hackers ou descuido com a proteção das senhas. Veremos como nos proteger usando autenticação de dois fatores em nossos sistemas.</p>
+                                            <p>Sabemos que a autenticação de dois fatores é uma grande aliada dos nossos usuários, mas mostraremos porque os maiores beneficiados são o desenvolvedor e a empresa que detém o software. Mais do que isto, veremos como implementar a autenticação de dois fatores em um sistema Web utilizando PHP. Nossa solução poderá ser usada com qualquer autenticador de uso comum, como Google Authenticator, Authy e similares, bem como em uma implementação de cliente próprio, se você preferir.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-4">
@@ -410,8 +410,8 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-10" aria-controls="scedule-sub-2" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Code Revolution</span>
-                                                    <span class="nav-time">Willian Mano: 09:00 - 09:40</span>
+                                                    <span class="nav-header">Symfony 4 - E agora?!</span>
+                                                    <span class="nav-time">Nanderson Castro: 09:00 - 09:40</span>
                                                 </a>
                                             </li>
 
@@ -424,22 +424,22 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-12" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Symfony 4 - E agora?!</span>
-                                                    <span class="nav-time">Nanderson Castro: 10:40 - 11:30</span>
+                                                    <span class="nav-header">Code Revolution</span>
+                                                    <span class="nav-time">Willian Mano: 10:40 - 11:30</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-13" aria-controls="scedule-sub-5" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Intervalo</span>
-                                                    <span class="nav-time">12:00 - 13:30</span>
+                                                    <span class="nav-time">12:00 - 14:00</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-14" aria-controls="scedule-sub-6" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
-                                                    <span class="nav-time">Alisson Gomes: 14:00 - 14:40</span>
+                                                <a href="#scedule-sub-14" aria-controls="scedule-sub-8" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Mulheres no desenvolvimento de games: minha iniciativa e por onde começar</span>
+                                                    <span class="nav-time">Gabrielle Machado: 14:00 - 14:40</span>
                                                 </a>
                                             </li>
 
@@ -451,21 +451,14 @@
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-16" aria-controls="scedule-sub-8" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
-                                                    <span class="nav-time">Gabrielle Machado: 15:40 - 16:20</span>
+                                                <a href="#scedule-sub-16" aria-controls="scedule-sub-9" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Aprendendo a empreender nos erros dos outros</span>
+                                                    <span class="nav-time">Evaldo Barbosa: 15:40 - 17:20</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-17" aria-controls="scedule-sub-9" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Implementando autenticação de dois fatores em qualquer aplicação</span>
-                                                    <span class="nav-time">Ricardo Coelho: 16:30 - 17:10</span>
-                                                </a>
-                                            </li>
-
-                                            <li role="presentation" class="">
-                                                <a href="#scedule-sub-18" aria-controls="scedule-sub-10" role="tab" data-toggle="tab">
+                                                <a href="#scedule-sub-17" aria-controls="scedule-sub-10" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Encerramento</span>
                                                     <span class="nav-time">17:30</span>
                                                 </a>
@@ -483,8 +476,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-10">
-                                            <h3>Code Revolution</h3>
-                                            <p>Vamos relembrar os alicerces da engenharia de software e trazer para os dias atuais as novas abordagens, técnicas e processos utilizados. Entenderemos na prática coisas como Agile, CI, Testes e etc.. Vamos trazer para nossos dias a verdadeira revolução, a revolução do código!</p>
+                                            <h3>Symfony 4 - E agora?!</h3>
+                                            <p>Conheceremos todas as novidades trazidas com a nova versão desse fullstack framework que é o Symfony. Veremos como essas mudanças impactam na componentização de nossas aplicações PHP.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-11">
@@ -493,8 +486,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-12">
-                                            <h3>Symfony 4 - E agora?!</h3>
-                                            <p>Conheceremos todas as novidades trazidas com a nova versão desse fullstack framework que é o Symfony. Veremos como essas mudanças impactam na componentização de nossas aplicações PHP.</p>
+                                            <h3>Code Revolution</h3>
+                                            <p>Vamos relembrar os alicerces da engenharia de software e trazer para os dias atuais as novas abordagens, técnicas e processos utilizados. Entenderemos na prática coisas como Agile, CI, Testes e etc.. Vamos trazer para nossos dias a verdadeira revolução, a revolução do código!</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-13">
@@ -503,27 +496,22 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-14">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
-                                        </div>
-
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-15">
                                             <h3>Programadores e o Código-Fonte da Ansiedade</h3>
                                             <p>Um breve relato de como um programador pode passar por situações de ansiedade que podem comprometer produtividade e a própria carreira. Existem inúmeros casos de depressão em programadores e no talk vamos discutir como evitar e como sair de um momento difícil na carreira de desenvolvedor.</p>
                                         </div>
 
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-15">
+                                            <h3>Mulheres no desenvolvimento de games: minha iniciativa e por onde começar</h3>
+                                            <p>Nesta palestra a Gabrielle Machado irá compartilhar conosco sua experiência no caminho do desenvolvimento de jogos sérios. Além disso ela vai dar dicas para todos aqueles que desejam começar a desenvolver jogos, em especial as mulheres.</p>
+                                        </div>
+
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-16">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Aprendendo a empreender nos erros dos outros</h3>
+                                            <p>Empreendedorismo e Desenvolvimento.</p>
+                                            <p>Nessa palestra mostrarei ao programador (ou outro profissional) que empreender é muito mais que ser "o frente" do negócio. Que o intraempreendedorismo é uma forma de executar o seu trabalho com paixão e ainda aprender com os erros do negócio para, futuramente, empreender em sua própria ideia. Que executar seu trabalho com um propósito claro (a estratégia) é a melhor forma de dar resultados e aprender a olhar o horizonte sem medo.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-17">
-                                            <h3>Implementando autenticação de dois fatores em qualquer aplicação</h3>
-                                            <p>Todos temos conhecidos cujas senhas foram expostas. Conhece alguém? São frequentes os relatos de invasão de servidores, uso de engenharia social, vazamentos de senhas por hackers ou descuido com a proteção das senhas. Veremos como nos proteger usando autenticação de dois fatores em nossos sistemas.</p>
-                                            <p>Sabemos que a autenticação de dois fatores é uma grande aliada dos nossos usuários, mas mostraremos porque os maiores beneficiados são o desenvolvedor e a empresa que detém o software. Mais do que isto, veremos como implementar a autenticação de dois fatores em um sistema Web utilizando PHP. Nossa solução poderá ser usada com qualquer autenticador de uso comum, como Google Authenticator, Authy e similares, bem como em uma implementação de cliente próprio, se você preferir.</p>
-                                        </div>
-
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-18">
                                             <h3>Encerramento</h3>
                                             <p>Chegamos ao final de mais um Fórum. Mas o evento não acaba aqui. Que tal tomar aquele chopp com a galera que você conheceu ou conhece? Muita coisa será apresentada e aprendida nesses dois dias, então assunto é o que não vai faltar. :)</p>
                                         </div>
