--- a/index.html
+++ b/index.html
@@ -283,7 +283,6 @@
 
                                         <!-- Nav tabs -->
                                         <ul class="nav nav-cus col-md-4" role="tablist"  id="nav-ul-scedule-1">
-
                                             <li role="presentation" class="active">
                                                 <a href="#scedule-sub-1" aria-controls="scedule-sub-1" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Credenciamento</span>
@@ -313,9 +312,9 @@
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-5" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Chatbots 101</span>
-                                                    <span class="nav-time">Lucas Souza: 10:40 - 11:30</span>
+                                                <a href="#scedule-sub-12" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Code Revolution</span>
+                                                    <span class="nav-time">Willian Mano: 10:40 - 11:30</span>
                                                 </a>
                                             </li>
 
@@ -328,7 +327,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-7" aria-controls="scedule-sub-7" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Workshop: Introdução à modelagem de bancos NoSQL - ArangoDB</span>
+                                                    <span class="nav-header">Workshop: Introdução à modelagem de bancos NoSQL com ArangoDB</span>
                                                     <span class="nav-time">Lucas Souza: 13:00 - 15:00</span>
                                                 </a>
                                             </li>
@@ -367,9 +366,9 @@
                                             <p>Você já deve ter lido ou ouvido falar sobre "Data Science", e não sabe o que é? Vamos juntos conhecer e aprender sobre a "Ciência dos Dados", onde e como podemos aplicá-la, e o por quê dessa área tem crescido tanto, tornado-se uma necessidade para a resolução de problemas e situações da vida cotidiana atual.</p>
                                         </div>
 
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-5">
-                                            <h3>Chatbots 101</h3>
-                                            <p>Uma introdução bem descontraída ao mundo do chatbots e como eles podem ajudar a resolver alguns de seus problemas.</p>
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-12">
+                                            <h3>Code Revolution</h3>
+                                            <p>Vamos relembrar os alicerces da engenharia de software e trazer para os dias atuais as novas abordagens, técnicas e processos utilizados. Entenderemos na prática coisas como Agile, CI, Testes e etc.. Vamos trazer para nossos dias a verdadeira revolução, a revolução do código!</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-6">
@@ -423,9 +422,9 @@
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-12" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Code Revolution</span>
-                                                    <span class="nav-time">Willian Mano: 10:40 - 11:30</span>
+                                                <a href="#scedule-sub-5" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Chatbots 101</span>
+                                                    <span class="nav-time">Lucas Souza: 10:40 - 11:30</span>
                                                 </a>
                                             </li>
 
@@ -485,9 +484,9 @@
                                             <p>Você acha que é APENAS o Marketing e Vendas que fazem a sua Startup de modelo de negócio SaaS (Software As A Service) crescer? Definitivamente, não.  Você precisa de um excelente CTO (Chief Technology Officer)! Ele tem uma importante missão, pois é dele a responsabilidade de transformar os objetivos estratégicos das empresas em realidade, a partir do que o mercado necessita. É disso que vamos falar.</p>
                                         </div>
 
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-12">
-                                            <h3>Code Revolution</h3>
-                                            <p>Vamos relembrar os alicerces da engenharia de software e trazer para os dias atuais as novas abordagens, técnicas e processos utilizados. Entenderemos na prática coisas como Agile, CI, Testes e etc.. Vamos trazer para nossos dias a verdadeira revolução, a revolução do código!</p>
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-5">
+                                            <h3>Chatbots 101</h3>
+                                            <p>Uma introdução bem descontraída ao mundo do chatbots e como eles podem ajudar a resolver alguns de seus problemas.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-13">
